app/sf-metering-sink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sf-metering-sink
spec:
  type: ClusterIP
  selector:
    app: sf-metering-sink
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
